--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,6 @@
   <app-header></app-header>
   <div class="main-content">
     <app-sidebar></app-sidebar>
-    <app-course-list></app-course-list>
+    <router-outlet></router-outlet> <!-- Aquí es donde se renderizarán las rutas -->
   </div>
 </div>
